# libzorpll

./: .cvsignore  .gitignore  AUTHORS  COPYING  Makefile  Makefile.am  Makefile.in  NEWS  README  aclocal.m4  autogen.sh  balabit-unix-build  balabit-vs-build  config.status  configure  configure.in  dist.conf  dist.conf.in  libtool  makefile.msc  zorplibll.pc  zorplibll.pc.in  zorplibll.spec  zorplibll.spec.in
archived-changelogs/3.0/: ChangeLog  VERSION
archived-changelogs/3.1/: ChangeLog  VERSION
archived-changelogs/3.3/: ChangeLog
debian/: .cvsignore  Makefile  Makefile.am  Makefile.in  changelog  changelog.in  control  control.in  copyright  libzorpll-dev.install  libzorpll.install.in  libzorpll.postinst.in  libzorpll.shlibs.in.in  libzorpll3.9-0-memtrace.lintian-overrides  libzorpll3.9-0.config  libzorpll3.9-0.postinst  libzorpll3.9-0.shlibs  libzorpll3.9-0.templates  rules  rules.in  source.lintian-overrides
scripts/: Makefile  Makefile.am  Makefile.in  failure_notify.in  libzorpll.conf
solbuild/: Makefile  Makefile.am  Makefile.in  pkginfo.dev  pkginfo.dev.in  pkginfo.lib  pkginfo.lib.in  pkgmaker.sh  prototype-maker.sh  rules  rules.conf  rules.conf.in
src/: .cvsignore  Makefile  Makefile.am  Makefile.in  blob.c  cap.c  code.c  code_base64.c  code_cipher.c  code_gzip.c  connect.c  crypt.c  error.c  io.c  libzorpll.def  libzorpll.rc  libzorpll.rc.in  listen.c  log.c  makefile.msc  memtrace.c  misc.c  packetbuf.c  poll.c  process.c  random.c  registry.c  sockaddr.c  socket.c  socketsource.c  source.c  ssl.c  stackdump.c  stream.c  streamblob.c  streambuf.c  streamfd.c  streamgzip.c  streamline.c  streamssl.c  (+4 more)
src/zorp/: .arch-inventory  .cvsignore  Makefile  Makefile.am  Makefile.in  blob.h  cap.h  code.h  code_base64.h  code_cipher.h  code_gzip.h  connect.h  error.h  io.h  listen.h  log.h  memtrace.h  misc.h  packetbuf.h  poll.h  process.h  random.h  registry.h  sockaddr.h  socket.h  socketsource.h  source.h  ssl.h  stackdump.h  stamp-h1  stream.h  streamblob.h  streambuf.h  streamfd.h  streamgzip.h  streamline.h  streamssl.h  streamtee.h  thread.h  zobject.h  (+7 more)
tests/: Makefile  Makefile.am  Makefile.in  portrandom.c  test_base64.c  test_blob.c  test_codecipher.c  test_codegzip.c  test_conns.c  test_random.c  test_readline.c  test_registry.c  test_sockaddr.c  test_ssl.c  test_streams.c  test_valid_chars.c  zcrypt.c
tgz2build/: Makefile  Makefile.am  Makefile.in  libzorpll-dev.files  libzorpll3.9-0.files  rules  tgz2deps
tgzbuild/: Makefile  Makefile.in  libzorpll-dev.files  libzorpll3.9-0.files
winbuild/: Makefile  Makefile.am  Makefile.in  build.bat  build.bat.in  libzorpll.la  win2deps
